test/good/arrays/comprehension09.px

a = [x/y for x in 1.0..2.0 for y in 2.0...6.0 by 2.0]
for x in a do
    print x
