test/bad/arrays/comprehension02.px

a = [y for x in 1...5]
